[package]
name = "ccp"
version = "1.0.0"
edition = "2021"
authors =["Julian Vesper <jvesper95@gmail.com"]
description = "A minimal CLI tool to parse and view crash context files created by fuzzware"


[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
cli-clipboard = "0.2.1"
crossterm = { version = "0.23" }
tui = { version = "0.18", features = ["crossterm"] }
